sqlite-web/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sqlite-web-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: sqlite-web-service
      port:
        number: 80
  rules:
  - host: chart-example.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sqlite-web-service
            port:
              number: 80
